force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Severity 1: Critical production issue - business completely stopped or revenue impacted</fullName>
            </value>
            <value>
                <fullName>Severity 2: Major functionality impacted and time-sensitive</fullName>
            </value>
            <value>
                <fullName>Severity 3: Minor functionality impacted and time-sensitive</fullName>
            </value>
            <value>
                <fullName>Severity 4: General inquiry, how-to, or routine technical issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>