force-app/main/default/objects/Case/fields/Social_Media_Post__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Media Post</label>
    <referenceTo>Social_Media_Post__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>