force-app/main/default/objects/Case/fields/Sprout_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Sprout_Message_Type__c</fullName>
    <label>Sprout Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Ad Comment</fullName>
            </value>
            <value>
                <fullName>Facebook Private Message</fullName>
            </value>
            <value>
                <fullName>Facebook Post</fullName>
            </value>
            <value>
                <fullName>Facebook Rating</fullName>
            </value>
            <value>
                <fullName>Google Review</fullName>
            </value>
            <value>
                <fullName>Trustpilot Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>