force-app/main/default/objects/Case/fields/Time_Closed_Before_Being_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Time_Closed_Before_Being_Reopened__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Date_Time_Reopened__c), 
        ISBLANK(Most_Recent_Closed_Date__c)
    ), 
    NULL, 
    Most_Recent_Closed_Date__c - Date_Time_Reopened__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Closed Before Reopening (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>