force-app/main/default/objects/Case/fields/Total_Hours_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_to_Close__c</fullName>
    <label>Total Hours to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>