force-app/main/default/objects/Case/fields/Total_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Time__c</fullName>
    <description>Counts the amount of time the case has been in open status.</description>
    <label>Total Open Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>