force-app/main/default/objects/Case/fields/Was_Closed_by_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Was_Closed_by_Submitter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this case was closed by the original submitter via the IT Support Center</description>
    <label>Was Closed by Submitter</label>
    <type>Checkbox</type>
</CustomField>