force-app/main/default/objects/Case/fields/Was_Created_Using_Utility_Bar__c.field-meta.xml
<CustomField>
    <fullName>Was_Created_Using_Utility_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Created Using Utility Bar</label>
    <type>Checkbox</type>
</CustomField>