force-app/main/default/objects/Case/fields/Was_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Was_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Escalated</label>
    <type>Checkbox</type>
</CustomField>