force-app/main/default/objects/Case/recordTypes/Community_Internal.recordType-meta.xml
<RecordType>
    <fullName>Community_Internal</fullName>
    <active>true</active>
    <businessProcess>IT Department</businessProcess>
    <label>Community - Internal</label>
</RecordType>