force-app/main/default/objects/Case/recordTypes/DK_CPR_Death.recordType-meta.xml
<RecordType>
    <fullName>DK_CPR_Death</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>DK - CPR Death</label>
</RecordType>