force-app/main/default/objects/Case/recordTypes/DK_CPR_Update.recordType-meta.xml
<RecordType>
    <fullName>DK_CPR_Update</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>DK - CPR Update</label>
</RecordType>