force-app/main/default/objects/Case/recordTypes/DK_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>DK_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>DK - Customer Service</label>
</RecordType>