force-app/main/default/objects/Case/recordTypes/DK_Event_Booking.recordType-meta.xml
<RecordType>
    <fullName>DK_Event_Booking</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>DK - Event Booking</label>
</RecordType>