force-app/main/default/objects/Case/recordTypes/DK_Pension.recordType-meta.xml
<RecordType>
    <fullName>DK_Pension</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>DK - Pension</label>
</RecordType>