force-app/main/default/objects/Case/recordTypes/DK_Refunds.recordType-meta.xml
<RecordType>
    <fullName>DK_Refunds</fullName>
    <active>true</active>
    <businessProcess>Refund Process</businessProcess>
    <label>DK - Refunds</label>
</RecordType>