force-app/main/default/objects/Case/recordTypes/DK_Review.recordType-meta.xml
<RecordType>
    <fullName>DK_Review</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Handles all incoming reviews (Google, Trustpilot, Facebook, etc)</description>
    <label>DK - Review</label>
</RecordType>