force-app/main/default/objects/Case/recordTypes/IE_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>IE_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>IE - Customer Service</label>
</RecordType>