force-app/main/default/objects/Case/recordTypes/IE_Event_Booking.recordType-meta.xml
<RecordType>
    <fullName>IE_Event_Booking</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>IE - Event Booking</label>
</RecordType>