force-app/main/default/objects/Case/recordTypes/IT_Department.recordType-meta.xml
<RecordType>
    <fullName>IT_Department</fullName>
    <active>true</active>
    <businessProcess>IT Department</businessProcess>
    <label>IT Department</label>
</RecordType>