force-app/main/default/objects/Case/recordTypes/Lecture_Invoicing.recordType-meta.xml
<RecordType>
    <fullName>Lecture_Invoicing</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>Lecture Invoicing</label>
</RecordType>