force-app/main/default/objects/Case/recordTypes/SE_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>SE_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>SE - Customer Service</label>
</RecordType>