force-app/main/default/objects/Case/recordTypes/SE_Event_Booking.recordType-meta.xml
<RecordType>
    <fullName>SE_Event_Booking</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>SE - Event Booking</label>
</RecordType>