force-app/main/default/objects/Case/recordTypes/SE_Refunds.recordType-meta.xml
<RecordType>
    <fullName>SE_Refunds</fullName>
    <active>true</active>
    <businessProcess>Refund Process</businessProcess>
    <label>SE - Refunds</label>
</RecordType>