force-app/main/default/objects/Case/recordTypes/SE_Review.recordType-meta.xml
<RecordType>
    <fullName>SE_Review</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Handles all incoming reviews for Sweden (Google, Trustpilot, Facebook, etc)</description>
    <label>SE - Review</label>
</RecordType>