force-app/main/default/objects/Case/validationRules/Req_Issue_Category_Origin_Before_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Issue_Category_Origin_Before_Closing</fullName>
    <active>true</active>
    <description>On records for IT_Department, it is required to fill in Issue Origin and Issue Category, before marking a case as Closed</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;IT_Department&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
NOT(Was_Closed_by_Submitter__c),
OR(
ISBLANK(TEXT(Issue_Category__c)),
ISBLANK(TEXT(Issue_Origin__c))
)
)</errorConditionFormula>
    <errorDisplayField>Issue_Origin__c</errorDisplayField>
    <errorMessage>You cannot close this case unless both Issue Category and Issue Origin are set.</errorMessage>
</ValidationRule>