force-app/main/default/objects/Case/listViews/Bereavement_Team_Case.listView-meta.xml
<ListView>
    <fullName>Bereavement_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bereavement Team</label>
    <queue>Bereavement_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>