force-app/main/default/objects/Case/listViews/Case_Refunds_Denmark_Case.listView-meta.xml
<ListView>
    <fullName>Case_Refunds_Denmark_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Refund_Request_Amount__c</field>
        <operation>greaterThan</operation>
        <value>DKK 1000</value>
    </filters>
    <label>Case - Refunds - Denmark</label>
    <queue>Case_Refunds_Denmark</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>