force-app/main/default/objects/Case/listViews/Case_Refunds_Sweden_Case.listView-meta.xml
<ListView>
    <fullName>Case_Refunds_Sweden_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case - Refunds - Sweden</label>
    <queue>Case_Refunds_Sweden</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>