force-app/main/default/objects/Case/listViews/Closed_Cases_DK_Customer_Service.listView-meta.xml
<ListView>
    <fullName>Closed_Cases_DK_Customer_Service</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>DK - Customer Service (Closed Cases)</label>
    <queue>DK_Customer_Service</queue>
</ListView>