force-app/main/default/objects/Case/listViews/Customer_Service_SE.listView-meta.xml
<ListView>
    <fullName>Customer_Service_SE</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Duration_Days__c</columns>
    <columns>NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>SE - Customer Service</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/21/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Response Received,On Hold,Escalated</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.SE_Customer_Service</value>
    </filters>
    <label>Customer Service - SE</label>
</ListView>