force-app/main/default/objects/Case/listViews/DK_Cases_in_Progress.listView-meta.xml
<ListView>
    <fullName>DK_Cases_in_Progress</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.SOURCE</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.DK_Customer_Service</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Progress,Response Received</value>
    </filters>
    <label>DK - Cases in Progress</label>
</ListView>