force-app/main/default/objects/Case/listViews/DK_Event_Booking_Case.listView-meta.xml
<ListView>
    <fullName>DK_Event_Booking_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DK - Event Booking</label>
    <queue>DK_Event_Booking</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>