force-app/main/default/objects/Case/listViews/DK_Event_Booking_Closed.listView-meta.xml
<ListView>
    <fullName>DK_Event_Booking_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DK - Event Booking (Closed)</label>
    <queue>DK_Event_Booking</queue>
</ListView>