force-app/main/default/objects/Case/listViews/DK_Pension_Case.listView-meta.xml
<ListView>
    <fullName>DK_Pension_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DK Pension</label>
    <queue>DK_Pension</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>